--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,17 @@ dependencies {
     // database
     implementation 'org.postgresql:postgresql:42.2.27'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1'
+
+    // test
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
 tasks.named('test') {
+    useJUnitPlatform()
+}
+
+test {
     useJUnitPlatform()
 }
